welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: not found: value faireCarre
	faireCarre
        ^PatternPicture:9: error: not found: value c
 	avance();setCouleurBrosse(c);baisseBrosse();
                                  ^