welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {def faireMotif {
	faireCarre
	var j = Color.YELLOW
 	var r = Color.RED
 	var b = Color.BLUE
 	var v = Color.GREEN
 	avance();setCouleurBrosse(c);baisseBrosse();
}
}